--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="card mb-3 border-green">
           <div class="row no-gutters">
             <div class="col-md-4 bg-dark">
-              <img src="Imagenes/ContactO.png" class="card-img" alt="Contact">
+              <img src="Imagenes/Contacto.png" class="card-img" alt="Contact">
             </div>
             <div class="col-md-8 bg-gray">
               <div class="card-body">
@@ -351,4 +351,5 @@
     }
   </script>
 </body>
+
 </html>
