--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
       </li>
     </ul>
     <div class="tab-content mt-3">
-      <div class="tab-pane fade show active" id="gloria">
-        <div class="card w-25 border-green">
+      <div class="tab-pane fade show active row" id="gloria">
+        <div class="card w-25 border-green col-md-3 col-sm-12">
           <img src="Imagenes/Paneton_Gloria.webp" class="card" alt="Paneton_Gloria">
           <div class="card-body bg-gray">
             <h5 class="card-title font-weight-bold">Panetón GLORIA Bolsa 900g</h5>
@@ -240,8 +240,8 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane fade" id="donofrio">
-        <div class="card w-25 border-green">
+      <div class="tab-pane fade row" id="donofrio">
+        <div class="card w-25 border-green col-md-3 col-sm-12">
           <img src="Imagenes/Paneton_Donofrio.webp" class="card" alt="Paneton_Donofrio">
           <div class="card-body bg-gray">
             <h5 class="card-title font-weight-bold">Panetón DONOFRIO Bolsa 880g</h5>
@@ -250,8 +250,8 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane fade" id="motta">
-        <div class="card w-25 border-green">
+      <div class="tab-pane fade row" id="motta">
+        <div class="card w-25 border-green col-md-3 col-sm-12">
           <img src="Imagenes/Paneton_Motta.webp" class="card" alt="Paneton_Motta">
           <div class="card-body bg-gray">
             <h5 class="card-title font-weight-bold">Panetón MOTTA Caja 750g</h5>
@@ -260,8 +260,8 @@
           </div>
         </div>
       </div>
-      <div class="tab-pane fade" id="todinno">
-        <div class="card w-25 border-green">
+      <div class="tab-pane fade row" id="todinno">
+        <div class="card w-25 border-green  col-md-3 col-sm-12">
           <img src="Imagenes/Paneton_Todinno.webp" class="card" alt="Paneton_Todinno">
           <div class="card-body bg-gray">
             <h5 class="card-title font-weight-bold">Panetón TODINNO Bolsa 900g + Panetón TODINNITO Bolsa 85g</h5>
@@ -353,3 +353,4 @@
 </body>
 
 </html>
+
